--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eventos DOM</title>
-    <style>
-        div#area{
-            font: normal 20pt Arial;
-            background: rgb(42, 139, 42);
-            color: white;
-            width: 200px;
-            height: 200px;
-            line-height: 200px;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styleex06.css" />
+    <title>Exercício 06</title>
+  </head>
+  <body>
     <div id="area">
-        Interaja...
+      Interaja...
     </div>
 
     <script>
-        var a = window.document.getElementById('area');
-        a.addEventListener('click', clicar);
-        a.addEventListener('mouseenter', entrar);
-        a.addEventListener('mouseout', sair);
+      var a = window.document.getElementById("area");
+      a.addEventListener("click", clicar);
+      a.addEventListener("mouseenter", entrar);
+      a.addEventListener("mouseout", sair);
 
-        function clicar(){
-            a.innerText = 'Clicou!';
-            a.style.background = 'red';
-        }
-        function entrar(){
-            a.innerText = 'Entrou!';
-        }
-        function sair(){
-            a.innerText = 'Saiu!';
-            a.style.background = 'green';
-        }
+      function clicar() {
+        a.innerText = "Clicou!";
+        a.style.background = "red";
+        a.style.color = "white";
+
+      }
+      function entrar() {
+        a.innerText = "Entrou!";
+        a.style.background = "yellow";
+        a.style.color = "black";
+      }
+      function sair() {
+        a.innerText = "Saiu!";
+        a.style.background = "green";
+        a.style.color = "white";
+      }
     </script>
-</body>
+  </body>
 </html>
