--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Somando números</title>
-    <style>
-        body {
-            font: normal 12pt Arial;
-        }
-        input {
-            font: normal 12pt Arial;
-            width: 80px;
-        }
-        div#res {
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styleex07.css" />
+    <title>Exercício 07</title>
+  </head>
+  <body>
+    <div id="container">
     <h1>Somando valores</h1>
-    <input type="number" name="txtn1" id="txtn1"> +
-    <input type="number" name="txtn2" id="txtn2">
-    <input type="button" value="Somar" onclick="somar()">
-    <div id="res">Resultado: </div>
+    <input type="number" name="txtn1" id="txtn1" /> +
+    <input type="number" name="txtn2" id="txtn2" />
+    <input type="button" value="Somar" onclick="somar()" />
+    <div id="res">Resultado:</div>
+  </div>
     <script>
-        function somar(){
-            var tn1 = window.document.getElementById('txtn1');
-            var tn2 = window.document.querySelector('input#txtn2');
-            var res = window.document.querySelector('div#res');
-            var n1 = Number.parseInt(tn1.value);
-            var n2 = Number.parseInt(tn2.value);
-            var s = n1 + n2;
-            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}</strong>`;
-        }
+      function somar() {
+        var tn1 = window.document.getElementById("txtn1");
+        var tn2 = window.document.querySelector("input#txtn2");
+        var res = window.document.querySelector("div#res");
+        var n1 = Number.parseInt(tn1.value);
+        var n2 = Number.parseInt(tn2.value);
+        var s = n1 + n2;
+        res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}</strong>`;
+      }
     </script>
-</body>
+  </body>
 </html>
