--- a/aula11/desafio01.html
+++ b/aula11/desafio01.html
@@ -1,20 +1,19 @@
 ﻿<!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
-    <title>PRF</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+    <title>Desafio 01</title>
+  </head>
+  <body>
     <div id="content">
-        <p>Verificação de nacionalidade</p>
-        Informe sua nacionalidade: 
-        <input type="text" name="nac" id="nac">
-        <input type="button" value="Verificar" id="verif" onclick="verificar()">
-        <p id="res">
-        </p>
+      <p>Verificação de nacionalidade</p>
+      Informe sua nacionalidade:
+      <input type="text" name="nac" id="nac" />
+      <input type="button" value="Verificar" id="verif" onclick="verificar()" />
+      <p id="res"></p>
     </div>
-</body>
+  </body>
 </html>
