--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -1,28 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DETRAN</title>
-</head>
-<body>
-    <h1>Sistema de multas</h1>
-    Velocidade do carro: <input type="number" name="textvel" id="txtvel"> Km/h 
-    <input type="button" value="verificar" onclick="calcular()">
-    <div id="res">
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script01.js"></script>
+    <title>Exercício 10</title>
+  </head>
+  <body>
+    <div id="content">
+      <h1>Sistema de multas</h1>
+      Velocidade do carro:
+      <input type="number" name="textvel" id="txtvel" /> Km/h
+      <input type="button" value="verificar" onclick="calcular()" />
+      <div id="res"></div>
     </div>
-    <script>
-        function calcular() {
-            var txtv = window.document.getElementById('txtvel');
-            var res = window.document.querySelector('div#res');
-            var vel = Number(txtv.value);
-            res.innerHTML = `<p>Sua velocidade atual é de <strong> ${vel}km/h </strong></p>`;
-            if (vel > 60) {
-                res.innerHTML += `<p>Você está <strong>multado</strong> por excesso de velocidade!`;
-            }
-            res.innerHTML += `<p>Dirija sempre com cinto de segurança!</p>`;
-        }
-    </script>
-</body>
+  </body>
 </html>
