--- a/aula12/aula12ex01/modelo.html
+++ b/aula12/aula12ex01/modelo.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hora do Dia</title>
-    <link rel="stylesheet" href="estilo.css">
-</head>
-<body onload="carregar()">
+    <link rel="stylesheet" href="estilo.css" />
+  </head>
+  <body onload="carregar()">
     <header>
-        <h1 id="msghora"></h1>
+      <h1 id="msghora"></h1>
     </header>
     <section>
-        <div id="msg">
-            
-        </div>
-        <div id="foto">
-            <img id="imagem" src="" alt="Foto do dia">
-        </div>
+      <div id="msg"></div>
+      <div id="foto">
+        <img id="imagem" src="" alt="Foto do dia" />
+      </div>
     </section>
     <footer>
-        <p>&copy; CursoemVideo</p>
+      <p>&copy; CursoemVideo</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
