--- a/aula14/aula14ex02/modelo.html
+++ b/aula14/aula14ex02/modelo.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 14 - Exercício 02</title> 
-    <link rel="stylesheet" href="estilo.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aula 14 - Exercício 02</title>
+    <link rel="stylesheet" href="estilo.css" />
+  </head>
+  <body>
     <header>
-        <h1>Gerar tabuada</h1>
+      <h1>Gerar tabuada</h1>
     </header>
     <section>
-        <div>
-            <p>Número <input type="number" name="num" id="txtnum">
-            <input type="button" value="Gerar" onclick="gerar()"></p>
-        </div>
-        <div>
-            <select name="tabuada" id="seltab" size="10">
-            <option>Digite um número acima.</option>
-            </select>
-        </div>
+      <div>
+        <p>
+          Número <input type="number" name="num" id="txtnum" />
+          <input type="button" value="Gerar" onclick="gerar()" />
+        </p>
+      </div>
+      <div>
+        <select name="tabuada" id="seltab" size="10">
+          <option>Digite um número acima.</option>
+        </select>
+      </div>
     </section>
     <footer>
-        <p>&copy; CursoemVideo</p>
+      <p>&copy; CursoemVideo</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
